--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
-set(PROJECT_NAME "QtTestProject")
+set(PROJECT_NAME "SemesterProjekt")
 project(${PROJECT_NAME})
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -60,7 +60,7 @@ endif ()
 
 if (WIN32)
     if (MSVC)
-        target_link_options(${PROJECT_NAME} PRIVATE "/SUBSYSTEM:windows")
+        target_link_options(${PROJECT_NAME} PRIVATE "/SUBSYSTEM:console")
         target_link_options(${PROJECT_NAME} PRIVATE "/ENTRY:mainCRTStartup")
     else ()
     endif ()
