UI Resizable; New Button

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,11 @@ endif ()
 
 if (WIN32)
     if (MSVC)
-        target_link_options(${PROJECT_NAME} PRIVATE "/SUBSYSTEM:console")
+        if (CMAKE_BUILD_TYPE MATCHES "Debug")
+            target_link_options(${PROJECT_NAME} PRIVATE "/SUBSYSTEM:console")
+        else ()
+            target_link_options(${PROJECT_NAME} PRIVATE "/SUBSYSTEM:windows")
+        endif ()
         target_link_options(${PROJECT_NAME} PRIVATE "/ENTRY:mainCRTStartup")
     else ()
     endif ()
