--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ add_executable(${PROJECT_NAME} src/main.cpp
         src/mainwindow.ui
         src/caesar/caesar.cpp
         src/caesar/caesar.h
-        src/caesar/result.h)
+        src/caesar/result.h src/caesar/ResultContainer.cpp src/caesar/ResultContainer.h)
 
 # Copy shared library files from Qt
 if (WIN32)
